--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Test site</title>
+        <title>Sótano Coder</title>
         <link rel="stylesheet" href="/assets/css/styles.css">
     </head>
     <body>
@@ -10,7 +10,7 @@
             <div class="nav-logo"><a href="/">Sótano Coder</a></div>
             <div class="nav-menu">
                 <ul>
-                    <li>Inicio</li>
+                    <li class="active">Inicio</li>
                     <li>Cursos</li>
                     <li>Ejercicios</li>
                     <li>Ejemplos y proyectos</li>
