Formada la pagina principal (aunque aun con algunos errores)
Añadidas secciones y colecciones.

--- a/website/apoyanos.html
+++ b/website/apoyanos.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Dead end</title>
-    </head>
-    <body>
-        <p>Sin salida</p>
-    </body>
-</html>
+---
+layout: "navigation-default"
+title: "Sótano Coder - Apóyanos"
+---
+<p>Apóyanos</p>
