--- a/website/index.html
+++ b/website/index.html
@@ -1,23 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Sótano Coder</title>
-        <link rel="stylesheet" href="/assets/css/styles.css">
-    </head>
-    <body>
-        <nav class="flex-container">
-            <div class="nav-logo"><a href="/">Sótano Coder</a></div>
-            <div class="nav-menu">
-                <ul>
-                    <li class="active">Inicio</li>
-                    <li>Cursos</li>
-                    <li>Ejercicios</li>
-                    <li>Ejemplos y proyectos</li>
-                </ul>
-            </div>
-            <div class="nav-support"><a href="/apoyanos.html">Apóyanos</a></div>
-        </nav>
-        <h1>Hello jekyll world!</h1>
-    </body>
-</html>
+---
+layout: "navigation-default"
+title: "Sótano coder"
+---
+<img src="/assets/images/banner_narrow.png" class="banner-img" alt="Sótano Coder">
+<div class="content-container">
+    {% for elem in site.landpage_elems %}
+    <div class="img-element {% if forloop.index0 == 0 %}wrap-reverse{% else %}wrap-regular{% endif %}">
+        <div class="text-element">
+            {% if elem.page_url %}
+            <a href="{{ elem.page_url }}">
+                <h1>{{ elem.title }}</h1>
+            </a>
+            {% else %}
+            <h1>{{ elem.title }}</h1>
+            {% endif %}
+            <div>{{ elem.content | markdownify }}</div>
+        </div>
+        <div class="img-wrapper {% if forloop.index0 == 1 %}flex-priority{% endif %}">
+            {% if elem.page_url %}
+            <a href="{{ elem.page_url }}">
+                <img src="{{ elem.img }}" alt="{{ elem.img_alt }}">
+            </a>
+            {% else %}
+            <img src="{{ elem.img }}" alt="{{ elem.img_alt }}">
+            {% endif %}
+        </div>
+    </div>
+    {% endfor %}
+</div>
