Organizacion de la pagina decidida y bocetada

--- a/website/cursos/index.html
+++ b/website/cursos/index.html
@@ -2,4 +2,13 @@
 layout: navigation-default
 title: Cursos
 ---
-<p>Prueba</p>
+<div class="content-container two-columns">
+    <div class="card">
+        <h1>Guía de programación</h1>
+        <p>En esta guía de programación </p>
+    </div>
+    <div class="card">
+        <h1>Profundización</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique recusandae nemo ipsa necessitatibus tempore fuga ipsam! Nobis minima, dolorum illo placeat fuga quibusdam quisquam hic fugit qui. Quibusdam, in quisquam!</p>
+    </div>
+</div>
